Fri Jan  7 18:37:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: ([-finishLoading]) add support for loading
	main nib.

Wed Jan  5 20:04:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMenuView.m: Changes to mouse tracking loop to provide more
	sophisticated handling of opening/closing of submenus in an attempt to
	mimic the behavior of NeXTstep.

Wed Jan  5 16:27:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMenuItem.m: minor fixes and tidying.
	* Source/NSMenuView.m: reverted to previous version - last change
	broke much more than it fixed.
	Also tidied coding style a bit and fixed a couple of encode/decode bugs.

Mon Jan  3 18:35:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundleAdditions.m: Added ([-awakeWithContext:]) method for
	nib containers to wake up a newly unarchived nib.

2000-01-03  Adam Fedor  <fedor@gnu.org>

	* Source/NSBitmapImageRep.m ([NSBitmapImageRep -draw]): Use
	size of image when passing rect to NSDrawBitmap.

Sun Jan  2 20:20:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: Fixes for focusm handling.
	* Source/NSWindow.m: ditto

Fri Dec 31 17:28:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSSlider.m: ([drawRect:]) minor drawing fix to ensure that
	the slider knob is drawn in the correct place.

Fri Dec 31 10:49:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundleAdditions.m: When decoding nib container, check for a
	'NSVisible' array, and order the windows it contains to the front.

Wed Dec 29  7:11:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSSliderCell.m: Fix so that setting and taking values from the
	cell work properly - removed unused ivar.
	* Headers/AppKit/NSSliderCell.h: removed unused ivar.

1999-12-29  David Lazaro  <khelekir@encomix.es>
